# mvmp

./: .gitignore  LICENSE  README.md  deploy.sh  main.py  pyproject.toml
.github/workflows/: publish.yml
mvmp/: __init__.py  arg_parser.py  cli.py
mvmp/core/: __init__.py  facemarker.py  facemarker_class.py  geometry_processing.py  io_utils.py  mp_utils.py  predict.py  rendering.py
